# arxiv_display

./: .gitignore  2203.15811.md  2203.15822.md  2203.16504.md  2203.16734.md  2203.16856.md  2203.16959.md  2204.00793.md  2204.01824.md  2204.02017.md  2204.02109.md  2204.03253.md  2204.03335.md  2204.06393.md  2207.10364.md  2207.10548.md  2208.08872.md  2208.09335.md  2209.00828.md  2209.01125.md  2209.02092.md  2209.04304.md  2209.07931.md  2209.13336.md  2209.13717.md  2209.14396.md  2209.15403.md  2210.01556.md  2210.01809.md  2210.05695.md  2210.10707.md  2210.11551.md  2210.11926.md  2210.12412.md  2211.00020.md  2211.01474.md  2211.06194.md  2211.07659.md  2211.07667.md  2211.08493.md  (+718 more)
_static/: documentation_options.js
docs/: MPIA daily digest.ipynb  Makefile  daily_template.html  debugging.ipynb  grid_template.html  log.ipynb  reprocess.ipynb
logs/: log-2022-04-04.md  log-2022-04-06.md  log-2022-04-07.md  log-2022-07-22.md  log-2022-08-22.md  log-2022-09-01.md  log-2022-09-02.md  log-2022-09-05.md  log-2022-09-06.md  log-2022-09-07.md  log-2022-09-08.md  log-2022-09-09.md  log-2022-09-15.md  log-2022-09-16.md  log-2022-09-19.md  log-2022-09-22.md  log-2022-09-23.md  log-2022-09-27.md  log-2022-09-29.md  log-2022-10-03.md  log-2022-10-04.md  log-2022-10-06.md  log-2022-10-10.md  log-2022-10-11.md  log-2022-10-12.md  log-2022-10-13.md  log-2022-10-17.md  log-2022-10-18.md  log-2022-10-19.md  log-2022-10-20.md  log-2022-10-21.md  log-2022-10-24.md  log-2022-10-25.md  log-2022-10-26.md  log-2022-10-27.md  log-2022-10-28.md  log-2022-11-01.md  log-2022-11-02.md  (+705 more)
(+1078 files in other folders)
