[metadata]
name = mpia_arxiv_display
version = 0.1
author = Morgan Fouesneau
author_email = fouesneau@mpia.de
description = Born during a science coffee at MPIA, this repository generates the screen content for the corridors of the institute.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/mpi-astronomy/arxiv_display
project_urls =
    Bug Tracker = https://github.com/mpi-astronomy/arxiv_display/issues
    Sourse Code = https://github.com/mpi-astronomy/arxiv_display
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"

[options.packages.find]
where = src

[options.extras_require]
docs =
  ipywidgets
  papermill
  arxiv_on_deck_2 @ git+https://github.com/mfouesneau/arxiv_on_deck_2
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov